[gd_scene load_steps=7 format=3 uid="uid://d0wj5neiuu1qn"]

[ext_resource type="Script" uid="uid://bhge1gdrrtkgp" path="res://Scene/GameUI/GameUi.gd" id="1_bidlq"]
[ext_resource type="LabelSettings" uid="uid://cqwudlhirlam6" path="res://Resources/red_title_45.tres" id="1_r1sam"]
[ext_resource type="LabelSettings" uid="uid://dii4mf45gydvs" path="res://Resources/white_title_45.tres" id="2_w38s2"]
[ext_resource type="LabelSettings" uid="uid://d0vvxsv7grbyj" path="res://Resources/yellow_title_80.tres" id="3_bidlq"]

[sub_resource type="Animation" id="Animation_bidlq"]
resource_name = "flash"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PressSpaceLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.141823, 0.4, 0.7, 0.956503),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e41aq"]
_data = {
&"flash": SubResource("Animation_bidlq")
}

[node name="GameUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bidlq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12

[node name="ScoreLable" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "0000"
label_settings = ExtResource("1_r1sam")

[node name="PressSpaceLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.5
offset_top = -23.0
offset_right = 130.5
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
text = "REPLAY
Press Space"
label_settings = ExtResource("2_w38s2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = ExtResource("3_bidlq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_e41aq")
}
autoplay = "flash"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
